--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     <!-- Container for embedding another website -->
     <div class="embed-container">
-        <iframe src="http://flappycreator.com/flappy.php?id=65ef8464d0a42" frameborder="0"></iframe>
+        <iframe src="https://flappycreator.com/flappy.php?id=65ef8464d0a42" frameborder="0"></iframe>
         <div class="overlay"></div>
     </div>
 
