--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="left-section">
                 <h1>FLAPPY PEPE</h1>
                 <h2>$FLYPEPE</h2>
-                <p>THE MEMEST GAME ON THE SOLANA MARKET OUT THERE🔥🔥🔥</p>
+                <p>THE MEMEST GAME ON THE SOLANA MARKET OUT THERE3🔥🔥🔥</p>
                 <div class="buttons-container">
                     <a href="#" class="button">TWITTER</a>
                     <a href="#" class="button">TELEGRAM</a>
