--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <div class="navbar-right">
                 <ul>
                     <li><a href="#">BUY $FLYPEPE</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">TOKENOMICS</a></li>
-                    <li><a href="#">ROADMAP</a></li>
-                    <li><a href="#">PLAY DEMO</a></li>
-                    <li><a href="#">TWITTER</a></li>
-                    <li><a href="#">TELEGRAM</a></li>
+                    <li><a href="#about">ABOUT</a></li>
+                    <li><a href="#tokenomics">TOKENOMICS</a></li>
+                    <li><a href="#roadmap">ROADMAP</a></li>
+                    <li><a href="#demo">PLAY DEMO</a></li>
+                    <li><a href="https://twitter.com/Flappy__PEPE">TWITTER</a></li>
+                    <li><a href="https://t.me/+2Cu2RIhCrUM5MWRk">TELEGRAM</a></li>
                 </ul>
             </div>
         </nav>
@@ -36,9 +36,9 @@
                 <h2>$FLYPEPE</h2>
                 <p>THE MEMEST GAME ON THE SOLANA MARKET OUT THERE🔥🔥🔥</p>
                 <div class="buttons-container">
-                    <a href="#" class="button">TWITTER</a>
-                    <a href="#" class="button">TELEGRAM</a>
-                    <a href="#" class="button">PLAY DEMO</a>
+                    <a href="https://twitter.com/Flappy__PEPE" class="button">TWITTER</a>
+                    <a href="https://t.me/+2Cu2RIhCrUM5MWRk" class="button">TELEGRAM</a>
+                    <a href="#demo" class="button">PLAY DEMO</a>
                     <a href="#" class="button">BUY $FLYPEPE</a>
                 </div>
                 
@@ -51,13 +51,13 @@
             <div class="right-section">
                 <img src="Flappy Pepe Banner.png" alt="Image" class="banner-image">
             </div>
-            <div class="about-section">
+            <div id="about" class="about-section">
                 <h1>ABOUT</h1>
                 <p>AN EASY TO PLAY FLAPPY PEPE GAME INCORPORATING CRYPTO'S MOST TRENDING CHARACTER. TIRED OF BEING STUCK IN THE MATRIX AND PLAYING BY THE RULES, FLAPPY PEPE IS READY TO REACH THE MOON. JOIN HIM IN A QUEST TO DODGING THE TRENDS AND HEADING STRAIGHT TO THE NUMBER 1 TOKEN. DO YOU HAVE WHAT IT TAKES TO COMPLETE THIS TASK?</p>
             </div>
         </section>
 
-            <div class="centered-content">
+            <div id="tokenomics" class="centered-content">
                     <h1>TOKENOMICS</h1>
                     <p>CONTRACT</p>
                     <p>1,000,000,000 SUPPLY 💸</p>
@@ -67,7 +67,9 @@
 
     </div>
 
-    <div class="roadmap-div">
+    <img src="PEPE GIF.gif" alt="Image" class="pepe-gif">
+
+    <div id="roadmap" class="roadmap-div">
         <h1>ROADMAP</h1>
     </div>      
 
@@ -78,43 +80,65 @@
         <div class="phase">
           <h2>PHASE 1</h2>
           <ul>
-            <li>Step 1: Lorem ipsum dolor sit amet</li>
-            <li>Step 2: Consectetur adipiscing elit</li>
-            <li>Step 3: Sed do eiusmod tempor incididunt</li>
+            <li>WEBSITE CREATION</li>
+            <li>CREATION OF $FLYPEPE TOKEN</li>
+            <li>GAME CREATION</li>
+            <li>GAME TESTING</li>
+            <li>TWITTER LAUNCH</li>
+            <li>TELEGRAM LAUNCH</li>
           </ul>
         </div>
         <div class="phase">
           <h2>PHASE 2</h2>
           <ul>
-            <li>Step 1: Ut labore et dolore magna aliqua</li>
-            <li>Step 2: Ut enim ad minim veniam</li>
-            <li>Step 3: Quis nostrud exercitation ullamco</li>
+            <li>LIST $FLYPEPE ON RAYDIUM</li>
+            <li>LP BURN</li>
+            <li>DEX UPDATES</li>
+            <li>FIRST CALLERS</li>
           </ul>
         </div>
         <div class="phase">
           <h2>PHASE 3</h2>
           <ul>
-            <li>Step 1: Duis aute irure dolor in reprehenderit</li>
-            <li>Step 2: Excepteur sint occaecat cupidatat non proident</li>
-            <li>Step 3: Sunt in culpa qui officia deserunt mollit</li>
+            <li>1M VOLUME</li>
+            <li>GAME LAUNCH</li>
+            <li>1000 TELEGRAM MEMBERS</li>
+            <li>500 TWITTER FOLLOWERS</li>
+            <li>CMC FAST TRACK APPLICATION</li>
+            <li>CG FAST TRACK APPLICATION</li>
           </ul>
         </div>
         <div class="phase">
           <h2>PHASE 4</h2>
           <ul>
-            <li>Step 1: Lorem ipsum dolor sit amet</li>
-            <li>Step 2: Consectetur adipiscing elit</li>
-            <li>Step 3: Sed do eiusmod tempor incididunt</li>
+            <li>WIDESPREAD MARKETING</li>
+            <li>SHILL/RAID TEAM</li>
+            <li>MORE CALLERS</li>
+            <li>CMC LISTING</li>
+            <li>CEX LISTING (AFTER $1M MCAP)</li>
           </ul>
         </div>
       </div>
       
-
+      <div id="demo" class="demo-div">
+        <h1>PLAY DEMO</h1>
+    </div> 
     <!-- Container for embedding another website -->
     <div class="embed-container">
         <iframe src="https://flappycreator.com/flappy.php?id=65ef8464d0a42" frameborder="0"></iframe>
         <div class="overlay"></div>
     </div>
+
+    <div class="contract">
+      <p>CONTRACT</p>
+    </div>
+
+    <div class="buttons-container-final">
+      <a href="https://twitter.com/Flappy__PEPE" class="button">TWITTER</a>
+      <a href="https://t.me/+2Cu2RIhCrUM5MWRk" class="button">TELEGRAM</a>
+      <a href="#" class="button">HOME</a>
+      <a href="#" class="button">BUY $FLYPEPE</a>
+  </div>
 
     <footer>
         <p>&copy; 2024 Flappy PEPE. All rights reserved.</p>
