--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
             <div id="tokenomics" class="centered-content">
                     <h1>TOKENOMICS</h1>
-                    <p>CONTRACT SOON</p>
+                    <p>CENsvXNbifrmq3TgteNKgW71HA2LrTP4NmeETWkpJLDt</p>
                     <p>1,000,000,000 SUPPLY 💸</p>
                     <p>LP BURNT 🔥</p>
                     <p>0% TAX 💳</p>
@@ -130,7 +130,7 @@
     </div>
 
     <div class="contract">
-      <p>CONTRACT SOON</p>
+      <p>CENsvXNbifrmq3TgteNKgW71HA2LrTP4NmeETWkpJLDt</p>
     </div>
 
     <div class="buttons-container-final">
